# MACY-UTP

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml  dockerfile.macy  guia_tecnica.md  insert_data.sql  manual_tecnico.md
migrations/2025-07-10-155931_creando_rocas/: down.sql  up.sql
nginx/: default.conf
src/: db.rs  main.rs  models.rs  rusty_rocks.rs  schema.rs  start_axum.rs
src/controllers/: grupos.rs  mod.rs  roquitas.rs  yappy.rs
src/controllers/structs/: mod.rs  yappy.rs
src/db/: conection.rs  mod.rs  models.rs
src/db/types/: enums.rs
src/schedulers/: cajas.rs  mod.rs  primero.rs
src/utils/: cajas_utils.rs  mod.rs  utils.rs
