[package]
name = "MACY-UTP"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bigdecimal = "0.4.8"
chrono-tz = "0.10.4"
diesel = { version = "2.2.11", features = ["mysql", "numeric", "r2d2", "serde_json"] }
diesel-derive-enum = { version = "2.1.0", features = ["mysql"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
tower-http = { version = "0.6.6", features = ["catch-panic", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
